Warning icon out of box issue solved
warning count is made displex flex and the border width increase slightly

--- a/core/templates/css/oppia.css
+++ b/core/templates/css/oppia.css
@@ -2533,7 +2533,7 @@ div#ng-curtain {
 
 .oppia-editor-warnings-indicator {
   border-style: inset;
-  border-width: 0 9px 14px 9px;
+  border-width: 0 12px 16px 12px;
   bottom: 10px;
   font-size: 0.7em;
   font-weight: bold;
@@ -2551,7 +2551,10 @@ div#ng-curtain {
   color: #fff;
 }
 .oppia-editor-warnings-count {
-  margin-left: -3px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 2px;
 }
 
 .uib-dropdown-menu.oppia-editor-warnings-box {
